PROD-12-18-19/force-app/main/default/objects/Permission_Event__e/Permission_Event__e.object-meta.xml
<CustomObject>
    <label>Permission Platform Event</label>
    <pluralLabel>Permission Platform Events</pluralLabel>
</CustomObject>