PROD-12-18-19/force-app/main/default/objects/Permission_Event__e/fields/Fund_Id__c.field-meta.xml
<CustomField>
    <fullName>Fund_Id__c</fullName>
    <label>Fund Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>