PROD-12-18-19/force-app/main/default/objects/Permission_Event__e/fields/Investment_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Investment_Account_Id__c</fullName>
    <label>Investment Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>