PROD-12-18-19/force-app/main/default/objects/Permission_Event__e/fields/Permission_Type__c.field-meta.xml
<CustomField>
    <fullName>Permission_Type__c</fullName>
    <label>Permission Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>